Fixes spacing

--- a/src/less/styles/_grid.less
+++ b/src/less/styles/_grid.less
@@ -1,4 +1,6 @@
-/*  --  _grid.less  --  */
+/*  styles/_grid.less
+ *
+ */
 
 body {
   margin: 0 auto;
@@ -24,7 +26,7 @@ body {
   width: 66.3157%; // 630/950
 }
 
-  .lt-ie9 .ls1-16{
+  .lt-ie9 .ls1-16 {
     width: 66%;
   }
 
